# areg-edgeai

./: .gitignore  CMakeLists.txt  LICENSE  README.md
apps/: CMakeLists.txt
apps/multiedge/: CMakeLists.txt
apps/multiedge/aiagent/: CMakeLists.txt  agentchathistory.cpp  agentchathistory.hpp  agentprocessor.cpp  agentprocessor.hpp  agentprovider.cpp  agentprovider.hpp  aiagent.cpp  aiagent.hpp  main.cpp
apps/multiedge/aiagent/ui/: aiagent.ui
apps/multiedge/edgedevice/: CMakeLists.txt  agentchathistory.cpp  agentchathistory.hpp  agentconsumer.cpp  agentconsumer.hpp  edgeconsumer.cpp  edgeconsumer.hpp  edgedevice.cpp  edgedevice.hpp  main.cpp
apps/multiedge/edgedevice/ui/: edgedevice.ui
apps/multiedge/resources/: CMakeLists.txt  MultiEdge.siml  NEMultiEdgeSettings.hpp  aiagent.rc  edgedevice.rc  multiedge.qrc  resource.h
conf/: setup.cmake
models/: Readme.md
models/llama/text/: placeholder.md
